# BetterBlackboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  progress.py  views.py
deploy/legacy-systemd/: README.md  betterblackboard-scrape.service  betterblackboard-scrape.timer  betterblackboard.service
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AnnouncementList.tsx  AssignmentDialog.tsx  GradeCircle.tsx  GradeTable.tsx  ScrapeButton.tsx  Toaster.tsx  TopNav.tsx  UpcomingList.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  table.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: Announcements.tsx  Assignments.tsx  Course.tsx  Grades.tsx  Home.tsx
frontend/src/styles/: globals.css
login_client/: BetterBlackboard-Login.bat  README.md  app.py  config.example.json  requirements.txt
scraper/: __init__.py  __main__.py  announcements.py  assignments.py  calendar.py  cli.py  courses.py  grades.py  interactive_login.py  login.py  parsers.py  pipeline.py  session.py
