[project]
name = "betterblackboard"
version = "0.1.0"
description = "A personal Blackboard scraper + dashboard."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5",
    "playwright>=1.47",
    "selectolax>=0.3.21",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "typer>=0.12",
    "apscheduler>=3.10",
    "tzdata>=2024.1",
]

[project.scripts]
bb-scrape = "scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scraper"]
